--- a/w2v.ipynb
+++ b/w2v.ipynb
@@ -2,10 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import utils\n",
+    "import pandas as pd\n",
+    "from time import time\n",
+    "from collections import defaultdict\n",
+    "import spacy\n",
+    "import gensim.models.keyedvectors as word2vec\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#initial params\n",
+    "model_path = './data/model_100.bin'\n",
+    "vec_dim = 100\n",
+    "vectors_name_to_save = './data/test_data_vectors'\n",
+    "dataset_file = './dataset/data_preprocessed.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(dataset_file, encoding = 'latin')\n",
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
